# dataset-viewer

./: .biomeignore  .gitignore  .gitmessage  README.md  README_zh.md  RELEASE.md  TEST_PLAN.md  WINDOWS_FIX_SUMMARY.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: RELEASE-TEMPLATE.md  RELEASE.md  changelog_config.json  copilot-instructions.md
.github/workflows/: build.yml  release.yml  update-version.yml
.husky/: pre-commit
docs/: OSS_PAGINATION.md  config.json  index.html
plugins/cad-plugin/: pnpm-lock.yaml
plugins/cad-plugin/src/: CADViewer.tsx  index.tsx  plugin-types.ts
public/: sample.pcd
screenshots/: load-more-mockup.md
src/: App.css  App.tsx  main.tsx  types.ts  vite-env.d.ts
src-plugins/cad-plugin/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src-plugins/cad-plugin/src/: CADViewer.tsx  index.tsx  plugin-types.ts
src-plugins/cad-plugin/src/i18n/: en.ts  index.ts  zh.ts
src-plugins/cad-plugin/src/utils/: cadModuleManager.ts
src-plugins/vue-cad-plugin/: package.json
src-tauri/: Cargo.toml  entitlements.plist  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  compression.rs  lib.rs  main.rs
src-tauri/src/archive/: analyzer.rs  handlers.rs  mod.rs  preview.rs  streaming.rs  types.rs
src-tauri/src/archive/formats/: common.rs  gzip.rs  mod.rs  rar.rs  seven_zip.rs  tar.rs  tar_gz.rs  zip.rs
src-tauri/src/commands/: archive.rs  download.rs  mod.rs  orc.rs  plugin_discovery.rs  plugin_file_loader.rs  plugin_installer.rs  storage.rs  system.rs
src-tauri/src/download/: manager.rs  mod.rs  progress.rs  provider.rs  types.rs
src-tauri/src/storage/: client_wrapper.rs  http_client.rs  huggingface_client.rs  local_client.rs  manager.rs  mod.rs  oss_client.rs  smb_client.rs  ssh_client.rs  traits.rs  webdav_client.rs
src-tauri/src/storage/oss/: mod.rs  parser.rs
src-tauri/src/storage/oss/auth/: aws_signer.rs  mod.rs  oss_signer.rs
src-tauri/src/utils/: chunk_size.rs  crypto.rs  http_downloader.rs  mod.rs  path_utils.rs  protocol_handler.rs
src/components/: ArchiveViewer.tsx  ConnectionPanel.tsx  ConnectionSelector.tsx  DemoServerList.tsx  DownloadProgress.tsx  FileBrowser.tsx  FileViewer.tsx  LanguageSwitcher.tsx  LocalConnectionForm.tsx  MediaViewer.tsx  SettingsPanel.tsx  SplashScreen.tsx  StorageTypeSelector.tsx  ThemeToggle.tsx  UpdateNotification.tsx  VirtualizedArchiveList.tsx  VirtualizedFileList.tsx  VirtualizedText.tsx  VirtualizedTextViewer.tsx
src/components/ConnectionPanel/: ConnectionFormContainer.tsx  ConnectionSelector.tsx  FeatureShowcase.tsx  HuggingFaceConnectionForm.tsx  LocalConnectionForm.tsx  OSSConnectionForm.tsx  OSSPlatformSelector.tsx  SMBConnectionForm.tsx  SSHConnectionForm.tsx  WebDAVConnectionForm.tsx  WebDAVForm.tsx  index.tsx  useConnectionLogic.ts
src/components/ConnectionPanel/common/: ConnectButton.tsx  ErrorDisplay.tsx  index.tsx
src/components/ConnectionPanel/forms/: HuggingFaceConnectionForm.tsx  LocalConnectionForm.tsx  OSSConnectionForm.tsx  SMBConnectionForm.tsx  SSHConnectionForm.tsx  WebDAVConnectionForm.tsx  index.tsx  types.ts
src/components/FileAssociation/: FileAssociationSettings.tsx  index.ts
src/components/FileBrowser/: ArchiveFileBrowser.tsx  ConnectionSwitcher.tsx  FileGridView.tsx  LoadMoreButton.tsx  PerformanceIndicator.tsx  SettingsPanel.tsx  VirtualizedFileList.tsx  index.tsx
src/components/FileViewer/: AV1VideoPlayer.tsx  ArchiveTreeList.tsx  ArchiveViewer.tsx  DataTableViewer.tsx  FileTypeRenderer.tsx  FileViewerContent.tsx  FileViewerHeader.tsx  FileViewerSearchBar.tsx  ImageRenderer.tsx  LazyComponentWrapper.tsx  ManualLoadButton.tsx  MarkdownViewer.tsx  MediaViewer.tsx  ParquetViewer.tsx  PluginViewer.tsx  PresentationViewer.tsx  TextViewer.tsx  UniversalDataTableViewer.tsx  VirtualizedArchiveList.tsx  VirtualizedTextViewer.tsx  WordViewer.tsx  index.tsx
src/components/FileViewer/SearchBar/: NavigationControls.tsx  SearchInput.tsx  SearchModeToggle.tsx  SearchResults.tsx
src/components/FileViewer/common/: LazyComponentWrapper.tsx  ManualLoadButton.tsx  UnifiedContentModal.tsx  index.ts
src/components/FileViewer/hooks/: index.ts  (+2 more)
src/components/PluginManager/: AdvancedPluginInstaller.tsx  index.tsx
src/components/common/: BreadcrumbNavigation.tsx  ContextMenu.tsx  ErrorBoundary.tsx  PasswordInput.tsx  StatusDisplay.tsx  index.tsx
src/config/: index.ts
src/hooks/: useMediaQuery.ts  useRouter.ts  useStorage.ts  useSyntaxHighlighting.ts  useTheme.ts
src/i18n/: index.ts  types.ts
src/services/: androidBackHandler.ts  compression.ts  connectionStorage.ts  dav1dDecoder.ts  defaultPluginAssociationService.ts  fileAssociationService.ts  folderDownloadService.ts  navigationHistory.ts  settingsStorage.ts  tauri-webdav.ts  updateService.ts
src/services/plugin/: builtInViewers.ts  pluginFramework.ts  pluginInitialization.ts  pluginManager.ts
src/services/storage/: BaseStorageClient.ts  HuggingFaceStorageClient.ts  LocalStorageClient.ts  OSSStorageClient.ts  StorageClient.ts  StorageManager.ts  WebDAVStorageClient.ts  index.ts  types.ts
src/services/webdav/: client.ts  directory.ts  file.ts  index.ts  parser.ts  service.ts  types.ts
src/stores/: storageStore.ts
src/styles/: pure-black.css
src/types/: index.ts  plugin-framework.ts  plugin.ts
src/utils/: archiveUtils.ts  clipboard.ts  codeFolding.ts  compressionOptimizer.ts  connectionIcons.tsx  csvEncodingDetection.ts  fileDataUtils.ts  fileIcons.tsx  fileTypes.ts  fileUtils.ts  folding.ts  markdownCodeHighlighter.ts  pathUtils.ts  performanceMonitor.ts  protocolUtils.ts  syntaxHighlighter.ts  syntaxHighlightingStorage.ts  textEncodingDetection.ts  typeUtils.ts  urlUtils.ts
(+71 files in other folders)
