[package]
name = "webdav-viewer"
version = "0.1.0"
description = "WebDAV Viewer - A modern WebDAV file browser"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "webdav_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
brotli = "3.4"
lz4 = "1.24"
zstd = "0.13"
async-stream = "0.3"
bytes = "1.5"

