[package]
name = "dataset-viewer"
version = "1.0.0"
description = "Dataset Viewer - A modern multi-source dataset browser"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dataset_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
url = "2.5"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
# Use rustls for better compatibility
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = "0.7"
brotli = "3.4"
lz4 = "1.24"
zstd = "0.13"
async-stream = "0.3"
bytes = "1.5"
quick-xml = "0.31"
urlencoding = "2.1"
dirs = "5.0"
crc32fast = "1.3"
log = "0.4"
# OSS 支持所需的依赖
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
# AWS SDK 支持 (用于 SigV4 预签名 URL)
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"
aws-types = "1.1"
# 添加 futures 以支持 block_on
futures = "0.3"

# 优化配置
[profile.release]
# 启用更激进的优化
opt-level = 3
# 启用链接时优化 (LTO)
lto = true
# 减少代码大小
codegen-units = 1
# 减少 panic 开销
panic = "abort"
# 去除调试信息
debug = false
# 优化二进制大小
strip = true

