[package]
name = "dataset-viewer"
version = "1.4.0-beta.1"
description = "Dataset Viewer - A modern multi-source dataset browser"
authors = ["you"]
edition = "2021"
default-run = "dataset-viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dataset_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Main application binary
[[bin]]
name = "dataset-viewer"
path = "src/main.rs"

# Binary for exporting TypeScript bindings
[[bin]]
name = "export-bindings"
path = "src/bin/export-bindings.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
url = "2.5"
# 添加 tauri-specta 相关依赖
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
once_cell = "1.19"
# Use rustls for better compatibility
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = "0.7"
brotli = "3.4"
lz4 = "1.24"
zstd = "0.13"
async-stream = "0.3"
bytes = "1.5"
quick-xml = "0.31"
urlencoding = "2.1"
dirs = "5.0"
crc32fast = "1.3"
log = "0.4"
# OSS 支持所需的依赖
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
# 添加 futures 以支持 block_on
futures = "0.3"

# SSH/SFTP 支持 - 使用纯 Rust 实现，避免 OpenSSL 依赖
russh = { version = "0.44", default-features = false }
russh-sftp = { version = "2.1", default-features = false }
russh-keys = { version = "0.44", default-features = false }
# SMB 支持 - 使用纯 Rust 实现
smb = "0.8"

# 优化配置
[profile.release]
# 启用更激进的优化
opt-level = 3
# 启用链接时优化 (LTO)
lto = true
# 减少代码大小
codegen-units = 1
# 减少 panic 开销
panic = "abort"
# 去除调试信息
debug = false
# 优化二进制大小
strip = true

